--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
+    "draft-js": "^0.11.7",
+    "draft-js-html": "^0.1.5",
+    "draftjs-to-html": "^0.9.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.1",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
@@ -44,5 +50,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
-  }
+  },
+  "proxy": "http://localhost:9000/"
 }
